# Educonnect

./: .env  ACTIVITY_TRACKING_IMPLEMENTATION.md  ADD_CONTACT_NESTED_FOLDERS.md  BACKEND_STARTED.md  BACK_BUTTON_ADDED.md  BLANK_SCREEN_FIX.md  COLLEGE_MANAGEMENT_GUIDE.md  COMPLETION_REPORT.txt  CORS_FIX.md  DATA_RECOVERY_OPTIONS.md  DOCKERHUB_PUSH_GUIDE.md  DOCKERHUB_QUICK.txt  DOCKER_BUILD_GUIDE.md  DOCKER_COMPLETE.md  DOCKER_GUIDE.md  DOCKER_HUB_SETUP.md  DOCKER_HUB_SUCCESS_REPORT.txt  DOCKER_IMAGES_VIJIKUMARESH.txt  DOCKER_LOGIN_HELP.md  DOCKER_PUSH_FIX.md  DOCKER_PUSH_GUIDE.md  DOCKER_README.md  DOKPLOY_COPY_PASTE.txt  DOKPLOY_QUICK_REFERENCE.txt  DOKPLOY_SETUP.md  DOKPLOY_VISUAL_GUIDE.md  ENV_EXAMPLES.md  FINAL_SUMMARY.md  FINAL_URLS.md  FOLDER_SYSTEM_COMPLETE.md  HOW_TO_ADD_DATA.md  IMPLEMENTATION_COMPLETE.md  JWT_SECURITY_GUIDE.md  LOGIN_TROUBLESHOOTING.md  MISSING_FOLDERS_SOLUTION.md  PRODUCTION_CONFIG.md  PUSH_VERIFICATION.md  QUICK_START_DOCKER.txt  QUICK_START_GUIDE.md  SIGNUP_FIX.md  (+24 more)
backend/: .dockerignore  .env  .gitignore  API_DOCUMENTATION.md  BACKEND_SUMMARY.md  Cargo.toml  Dockerfile  QUICKSTART.md  README.md  start-backend.sh
backend/src/: db.rs  main.rs  models.rs
backend/src/handlers/: auth.rs  book_orders.rs  folders.rs  mod.rs  recruitment.rs  seminars.rs  students.rs
frontend/: .dockerignore  .gitignore  ARCHITECTURE.md  CHECKLIST.md  Dockerfile  FEATURES.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  index.html  nginx.conf  package-lock.json  package.json  setup.sh  test-api.html  tsconfig.json  tsconfig.node.json  vite.config.ts
(+32 files in other folders)
